<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="MAIN" Id="{e6da0cd2-c9ac-4b6b-b1e1-4989c7274b85}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	


END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
fbCNC();
fbModbus();

bFirstScan:=FALSE;

// Testing for SourceTree 

]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="11" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="19" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>